--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,40 @@
+astroid==2.2.5
+certifi==2019.6.16
+chardet==3.0.4
+colorama==0.4.1
 coverage==4.5.3
+defusedxml==0.6.0
 dj-database-url==0.5.0
-Django==2.2.2
-django-cleanup==3.2.0
-django-cors-headers==3.0.2
-django-countries==5.4
-django-heroku==0.3.1
-djangorestframework==3.9.4
-django-crispy-forms==1.7.2
+Django==2.2.4
 django-allauth==0.39.1
+django-ckeditor==5.7.1
+django-cleanup==4.0.0
+django-cors-headers==3.1.0
+django-countries==5.4
+django-crispy-forms==1.7.2
+django-heroku==0.3.1
+django-js-asset==1.2.2
+django-tinymce4-lite==1.7.5
+djangorestframework==3.10.2
 gunicorn==19.9.0
+idna==2.8
+isort==4.3.21
+jsmin==2.2.2
+lazy-object-proxy==1.4.2
+mccabe==0.6.1
 mysqlclient==1.4.2
+oauthlib==3.1.0
 Pillow==6.0.0
 psycopg2==2.8.3
+pylint==2.3.1
+python3-openid==3.1.0
 pytz==2019.1
+requests==2.22.0
+requests-oauthlib==1.2.0
+six==1.12.0
 sqlparse==0.3.0
+stripe==2.36.0
+typed-ast==1.4.0
+urllib3==1.25.3
 whitenoise==4.1.2
+wrapt==1.11.2
